<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="humberparts.walkingprogrammers.AddActivity"
    tools:showIn="@layout/activity_add"
    android:orientation="vertical"
    android:background="@drawable/mainscreen1">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/studentstring"
        android:textSize="30dp"
        android:textColor="@color/black"
        android:layout_marginBottom="15dp"/>

    <EditText
        android:id="@+id/edittextstudentnumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/studentstring"
        android:background="@color/transparent"
        android:layout_marginBottom="20dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/partstring"
        android:textSize="30dp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"/>

    <EditText
        android:id="@+id/Part"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/partstring"
        android:background="@color/transparent"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
    <EditText
        android:id="@+id/Part2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/partstring"
        android:background="@color/transparent"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
    <EditText
        android:id="@+id/Part3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/partstring"
        android:background="@color/transparent"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
    <EditText
        android:id="@+id/Part4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/partstring"
        android:background="@color/transparent"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <EditText
        android:id="@+id/Part5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/partstring"
        android:background="@color/transparent"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <Button
        android:id="@+id/buttonadd1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:textColor="@color/white"
        android:text="@string/addstring"
        android:onClick="callIntentAdd"
        android:layout_marginTop="30dp"/>

    <ProgressBar
        android:id="@+id/progressBar3"
        style="@android:style/Widget.Holo.ProgressBar.Large"
        android:progressDrawable="@android:color/holo_blue_dark"
        android:layout_width="405dp"
        android:layout_height="wrap_content" />

</LinearLayout>
